# calendar-sync

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: autolog.yml  sync.yml
scripts/launchd/: com.forever22.sync.plist
src/forever22/: aggregate.py  auth.py  autolog.py  bestmate.py  blocks.py  cli.py  config.py  db.py  engagements.py  mirror.py  monitor.py  sync.py  view.py
src/forever22/web/: app.py
src/forever22/web/static/: style.css
src/forever22/web/templates/: base.html  engagement_detail.html  engagements.html  today.html  week.html
